--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,13 +27,16 @@ jobs:
       - name: build
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
-        run: |
+        run:
           pnpm build
+
+      - name: List dist contents
+        run: ls -R dist
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist/'
+          path: 'dist'
 
   deploy:
     needs: build_site
